<resources>
    <string name="app_name">Drop</string>
    <string name="title_activity_main">Drop</string>
    <string name="title_activity_map">Map</string>
    <string name="filter_title_drop">IntentFilter</string>

    <string name="permission_rationale_location">Location is needed part of this app. Drops are tagged with their location when created. This is also required to find drops that other users have created.</string>

    <string name="dec_drop_logo">Drop Logo</string>

    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="signed_out">Signed out</string>
    <string name="label_password">Password</string>
    <string name="label_email">Email</string>

    <string name="verify_email">Verify Email</string>
    <string name="email_verified">Email verified</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="resend_email">Resending email</string>
    <string name="cannot_resend">Cannot resend yet</string>

    <string name="login_main_text">Drop</string>
    <string name="loading">Loading</string>
    <string name="emailpassword_status_fmt">Email: %s : %b</string>
    <string name="login_button">Login</string>
    <string name="close_login">Close login popup</string>
    <string name="license_button">Licenses</string>
    <string name="drop_button">Drop</string>
    <string name="custom_license_title">Licenses used in Drop</string>

    <!--Toasts-->
    <string name="toast_password_wrong">Password is wrong</string>
    <string name="toast_auth_failed">Authentication failed.</string>
    <string name="toast_auth_success">Login completed.</string>
    <string name="toast_email_fail">Failed to send verification email.</string>
    <string name="toast_email_sent">Verification email sent to %s.</string>
    <string name="create_drop_heading">Create Drop</string>
    <string name="create_drop_submit">Drop</string>
    <string name="create_drop_text_label">Message</string>
    <string name="show_drop_button">Show drop</string>
    <string name="menu_create">Create</string>
    <string name="menu_find">Find</string>
    <string name="menu_main">Feed</string>
    <string name="main_btn_find">Find a drop</string>
    <string name="main_btn_create">Create a drop</string>
    <string name="item_title">Title</string>
    <string name="btn_more_txt">More</string>
    <string name="item_summary">Summary lorem ipsum</string>
    <string name="item_created">Created on: %1$s</string>
    <string name="item_location">50.83509 | -0.12786</string>
    <string name="create_drop_title">Title</string>
    <string name="main_btn_login">Login</string>
    <string name="create_drop_title_label">Title</string>
    <string name="f_m_face">Face of logged in user</string>
    <string name="f_m_welcome">Welcome%1$s</string>
    <string name="a_login_create">No account yet? Create one</string>
    <string name="already_member">Already a member? Login</string>
    <string name="label_name">Name</string>
    <string name="creating_account">Creating account…</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="verification_email_sent_to">Verification email sent to %s</string>
    <string name="email_not_arrived">Email not arrived? Send again</string>
    <string name="f_drop_title_label">Title</string>
    <string name="f_drop_message_label">Message</string>
    <string name="f_drop_location_label">Location</string>
    <string name="f_drop_created_label">Created by</string>
    <string name="f_drop_date_label">Date</string>
    <string name="f_dm_compass">Hunt</string>
    <string name="f_dm_hunt_distance">Distance: %dm</string>
    <string name="f_dm_hunt_bearing">Bearing from north: %.3f°</string>
    <string name="f_dm_search">Explore</string>
    <string name="no_email_access">Don\'t have access to that email?</string>
    <string name="find_search_explanation">Time for you to go and explore outside! In this mode, you will find drops
        randomly as you explore.
    </string>

    <string name="safety_message_short">Be safe and good luck!</string>
    <string name="find_search_heading">Explore!</string>
    <string name="search_notification_description">Displayed when in exploration mode for Drops</string>
    <string name="search_notification_name">Exploration</string>
    <string name="find_search_button">Explore</string>
    <string name="notification_explore_title">Drop</string>
    <string name="notification_explore_content">Searching for drops</string>
    <string name="f_dm_compass_explanation">Time for you to go and explore outside! In this mode, you will be on the hunt
        for a specific drop.
    </string>
    <string name="find_a_drop_btn">Let\'s go!</string>
    <string name="radius_text">Radius: %.1fkm</string>
    <string name="searching_drop">A drop has been located.

        Go find it for yourself!</string>
    <string name="cancel_this_drop">Can\'t find this drop?</string>
    <string name="are_you_sure">Sure</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="cancel_drop_dialog">Are you sure you want to give up finding this Drop?</string>
    <string name="show_drop">Show drop</string>
    <string name="keep_it">Keep it</string>
    <string name="leave_it">Leave it</string>
    <string name="found_the_drop">Found the drop!</string>
    <string name="welcome_message_1">Welcome to Drop!</string>
    <string name="welcome_message_2">The app where you go on a treasure hunt for messages</string>
    <string name="welcome_message_3">Log in or create an account below</string>
    <string name="forgot_button">Forgotten password?</string>
    <string name="reset_pass_email">Password reset will be sent to the email address: %s</string>
    <string name="toast_password_reset">Email reset sent to %s</string>
    <string name="cancel_explore">Cancel exploring</string>
    <string name="notification_found_drop">Found a drop!</string>
    <string name="found_a_drop">Found a drop!</string>

</resources>
