<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                                              android:layout_width="match_parent"
                                              android:orientation="vertical"
                                              android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatTextView
            android:layout_gravity="center"
            android:text="@string/find_search_heading"
            android:layout_marginTop="130dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAlignment="center" android:textSize="30sp"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_gravity="center"
            android:text="@string/find_search_explanation"
            android:layout_marginTop="80dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="18sp" android:textAlignment="center"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/safety_message_short"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/find_search_saftey"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:textAlignment="center"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/find_explore_btn"
            android:text="@string/find_search_button"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:layout_width="300dp"
            android:layout_height="50dp" android:background="#4CAF50"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_explore"
            android:text="@string/cancel_explore"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="#F44336"
            android:visibility="gone"/>

</androidx.appcompat.widget.LinearLayoutCompat>