<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/activity_settings"
              style="@style/DropTheme.NoTitleActivity">

    <androidx.appcompat.widget.AppCompatButton
            android:text="@string/edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/a_s_edit_profile_button"/>

    <androidx.appcompat.widget.AppCompatButton
            android:text="@string/sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/a_s_signout_button"/>

    <androidx.appcompat.widget.AppCompatButton
            android:text="@string/license_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/a_s_license_button"/>
</LinearLayout>