<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
             android:layout_height="@dimen/list_item_height"
             android:gravity="center_vertical">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">
        <TextView
                android:id="@+id/item_title"
                android:layout_width="403dp"
                android:layout_height="28dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:textAllCaps="true" android:textSize="20sp"
                android:text="@string/item_title"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
        />
        <TextView
                android:layout_width="404dp"
                android:layout_height="21dp"
                android:inputType="none"
                android:ems="10"
                android:id="@+id/item_summary"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/item_summary"
                android:layout_marginStart="4dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/item_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_created"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="4dp"
                app:layout_constraintTop_toBottomOf="@+id/item_title"/>
        <TextView
                android:text="@string/item_location"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/item_location"
                app:layout_constraintTop_toBottomOf="@+id/item_title"
                android:layout_marginEnd="3dp" app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>