<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="89dp"
            android:layout_marginBottom="136dp">

        <androidx.appcompat.widget.AppCompatImageView
                android:src="@drawable/drop_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/input_name"
                                                                     android:layout_width="match_parent"
                                                                     android:layout_height="wrap_content"
                                                                     android:inputType="textCapWords"
                                                                     android:hint="@string/label_name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText android:id="@+id/input_email"
                                                                     android:layout_width="match_parent"
                                                                     android:layout_height="wrap_content"
                                                                     android:inputType="textEmailAddress"
                                                                     android:hint="@string/label_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/input_password"
                                                                     android:layout_width="match_parent"
                                                                     android:layout_height="wrap_content"
                                                                     android:inputType="textPassword"
                                                                     android:hint="@string/label_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/a_signup_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/create_account"
                android:textAlignment="center"/>

        <androidx.appcompat.widget.AppCompatTextView android:id="@+id/link_login"
                                                     android:layout_width="fill_parent"
                                                     android:layout_height="wrap_content"
                                                     android:layout_marginBottom="24dp"
                                                     android:text="@string/already_member"
                                                     android:gravity="center"
                                                     android:textSize="16sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>