<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            tools:layout_editor_absoluteX="0dp"
            android:layout_marginBottom="215dp">

        <androidx.appcompat.widget.AppCompatImageView android:src="@drawable/drop_logo"
                                                      android:layout_width="100dp"
                                                      android:layout_height="100dp"
                                                      android:layout_marginBottom="24dp"
                                                      android:layout_gravity="center_horizontal"/>

        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                               android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/input_email"
                                                                     android:layout_width="match_parent"
                                                                     android:layout_height="wrap_content"
                                                                     android:inputType="textEmailAddress"
                                                                     android:hint="@string/label_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                               android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/input_password"
                                                                     android:layout_width="match_parent"
                                                                     android:layout_height="wrap_content"
                                                                     android:inputType="textPassword"
                                                                     android:hint="@string/label_password"/>
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:layout_marginTop="24dp"
                                                   android:layout_marginBottom="24dp"
                                                   android:padding="12dp"
                                                   android:text="@string/login_button"
                                                   android:id="@+id/a_login_button"/>

        <androidx.appcompat.widget.AppCompatTextView android:id="@+id/a_login_create"
                                                     android:layout_width="fill_parent"
                                                     android:layout_height="wrap_content"
                                                     android:layout_marginBottom="24dp"
                                                     android:text="@string/a_login_create"
                                                     android:gravity="center"
                                                     android:textSize="16sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
