<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_create_drop">

    <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
                                           android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/create_constraint_layout"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView android:layout_gravity="center"
                                                         android:layout_width="wrap_content"
                                                         android:layout_height="wrap_content"
                                                         android:layout_marginTop="50dp"
                                                         android:text="@string/create_drop_heading"
                                                         android:ems="10"
                                                         android:id="@+id/create_drop_heading"
                                                         android:inputType="none"
                                                         android:textAlignment="center"
                                                         android:textSize="30sp"
                                                         android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout android:layout_width="380dp"
                                                                   android:layout_height="wrap_content"
                                                                   android:layout_gravity="center"
                                                                   android:layout_marginTop="30dp"
                                                                   android:id="@+id/create_drop_title">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:hint="@string/create_drop_title_label"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout android:layout_height="wrap_content"
                                                                   android:layout_gravity="center"
                                                                   android:layout_width="380dp"
                                                                   android:layout_marginTop="20dp"
                                                                   android:id="@+id/create_drop_text">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences|textMultiLine"
                        android:hint="@string/create_drop_text_label"/>
            </com.google.android.material.textfield.TextInputLayout>

            <fragment android:layout_gravity="center"
                      android:id="@+id/create_drop_map"
                      android:layout_width="380dp"
                      android:layout_height="238dp"
                      android:layout_marginTop="30dp"
                      class="com.google.android.gms.maps.SupportMapFragment"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:layout_gravity="center"
                    android:text="@string/create_drop_submit"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/create_drop_button"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="50dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
